<resources>
    <string name="base_currency">Base Currency</string>
    <string name="target_currency">Target Currency</string>
    <string name="swap_currencies">Swap Currencies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_conversion">Conversion</string>
    <string name="title_currency_list">Currency List</string>
    <string name="fromid_nav_arg">fromId</string>
    <string name="fromshortname_nav_arg">fromShortName</string>
    <string name="fromlongname_nav_arg">fromLongName</string>
</resources>